# basic-movie-recommendation

./: .gitignore  README.md  gext.ipynb  index.html  main.py  pyproject.toml  style.css  test.py  train.ipynb
data/: model_data.joblib
model/: movies_data.joblib  recommend_system.joblib
