[project]
name = "movie-recc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "pylint>=4.0.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "tool>=0.8.0",
    "uvicorn>=0.38.0",
]
